force-app/main/default/objects/Product2/fields/Additional_Products_Services__c.field-meta.xml
<CustomField>
    <fullName>Additional_Products_Services__c</fullName>
    <label>Additional Products/ Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Same day funding available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>