force-app/main/default/objects/Product2/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <description>Training Class  Audience, who is the class ment for and who will benefit</description>
    <label>Training Class  Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Novice Aid Administrator</fullName>
            </value>
            <value>
                <fullName>Intermediate Aid Administrator</fullName>
            </value>
            <value>
                <fullName>Experienced Aid Administrator</fullName>
            </value>
            <value>
                <fullName>Bursar/Student Financial Svcs.</fullName>
            </value>
            <value>
                <fullName>Student Borrowers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>