force-app/main/default/objects/Product2/fields/c2g__CODAAllowDeleteInUse__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODAAllowDeleteInUse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Deletion of Product in Use</label>
    <type>Checkbox</type>
</CustomField>