force-app/main/default/objects/Product2/fields/c2g__CODAExternalId__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODAExternalId__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>