force-app/main/default/objects/Product2/fields/c2g__CODAIncludeInIncomeSchedule__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODAIncludeInIncomeSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deprecated: Include in Income Schedule</label>
    <type>Checkbox</type>
</CustomField>