force-app/main/default/objects/Product2/fields/c2g__CODASalesRevenueAccount__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODASalesRevenueAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The general ledger account to which sales revenues for this product be posted.</description>
    <label>Sales Revenue Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
        <filterItems>
            <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <filterItems>
            <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>