force-app/main/default/objects/Product2/fields/c2g__CODASalesTaxRule__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODASalesTaxRule__c</fullName>
    <label>External Tax Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>