force-app/main/default/objects/Product2/fields/c2g__CODAUnitOfWork__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODAUnitOfWork__c</fullName>
    <label>Unit of Work</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>