force-app/main/default/objects/Product2/fields/Dimension_1__c.field-meta.xml
<CustomField>
    <fullName>Dimension_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department Code</label>
    <referenceTo>c2g__codaDimension1__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>