force-app/main/default/objects/Product2/fields/Disbursement_Services__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Services__c</fullName>
    <label>Disbursement Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disubrsement through the NDN</fullName>
            </value>
            <value>
                <fullName>EFT disbursements on behalf of lenders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>