force-app/main/default/objects/Product2/fields/Discount_Amount_1__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_1__c</fullName>
    <formula>IF((CONTAINS(ProductCode,&quot;DISC-10&quot;)),0.10,IF((CONTAINS(ProductCode,&quot;DISC&quot;)),0.15,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>