force-app/main/default/objects/Product2/fields/Discount_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Discount_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount Eligible</label>
    <type>Checkbox</type>
</CustomField>