force-app/main/default/objects/Product2/fields/DNU_Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>DNU_Activity_Code__c</fullName>
    <label>DNU_Activity Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>50000</fullName>
            </value>
            <value>
                <fullName>20000</fullName>
            </value>
            <value>
                <fullName>20251</fullName>
            </value>
            <value>
                <fullName>10000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>