force-app/main/default/objects/Product2/fields/Duration_Min__c.field-meta.xml
<CustomField>
    <fullName>Duration_Min__c</fullName>
    <description>Minimum time needed for this training</description>
    <label>Duration Min</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>