force-app/main/default/objects/Product2/fields/General_Information__c.field-meta.xml
<CustomField>
    <fullName>General_Information__c</fullName>
    <label>General Information</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Demo on company website</fullName>
            </value>
            <value>
                <fullName>Web-based</fullName>
            </value>
            <value>
                <fullName>24-hours Access</fullName>
            </value>
            <value>
                <fullName>Real Time</fullName>
            </value>
            <value>
                <fullName>Instant Guarantee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>