force-app/main/default/objects/Product2/fields/Interfaces__c.field-meta.xml
<CustomField>
    <fullName>Interfaces__c</fullName>
    <label>Interfaces</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interfaces w/ lenders</fullName>
            </value>
            <value>
                <fullName>Interfaces w/ guarantors</fullName>
            </value>
            <value>
                <fullName>Able to accept major FAMS files</fullName>
            </value>
            <value>
                <fullName>Able to accept ISIR files</fullName>
            </value>
            <value>
                <fullName>Able to accept Direct Loan files</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>