force-app/main/default/objects/Product2/fields/Loan_Products_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Loan_Products_Delivery__c</fullName>
    <label>Loan Products/Delivery</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alternative Loan Processing</fullName>
            </value>
            <value>
                <fullName>Ability to manually create loan</fullName>
            </value>
            <value>
                <fullName>CommonLine Compliant</fullName>
            </value>
            <value>
                <fullName>On-Line MPN application for students</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>