force-app/main/default/objects/Product2/fields/Max__c.field-meta.xml
<CustomField>
    <fullName>Max__c</fullName>
    <description>What is the max duration for the training</description>
    <label>Duration Max</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>