force-app/main/default/objects/Product2/fields/Misc_Products_Services__c.field-meta.xml
<CustomField>
    <fullName>Misc_Products_Services__c</fullName>
    <label>Misc Products/Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OnLine Awarding</fullName>
            </value>
            <value>
                <fullName>OnLine entrance/exit interviews</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>