force-app/main/default/objects/Product2/recordTypes/ASATrainingCourses.recordType-meta.xml
<RecordType>
    <fullName>ASATrainingCourses</fullName>
    <active>false</active>
    <description>ASA training courses offered</description>
    <label>ASA Training Courses</label>
</RecordType>