force-app/main/default/objects/Product2/recordTypes/Competition.recordType-meta.xml
<RecordType>
    <fullName>Competition</fullName>
    <active>true</active>
    <description>Description of what other Guarantor(s) and Industry Competion have</description>
    <label>Competition</label>
</RecordType>