force-app/main/default/objects/Product2/recordTypes/Government_Services.recordType-meta.xml
<RecordType>
    <fullName>Government_Services</fullName>
    <active>true</active>
    <description>This record type is designated for use in Government Services</description>
    <label>Government Services</label>
</RecordType>