force-app/main/default/objects/Product2/recordTypes/Products_and_Services.recordType-meta.xml
<RecordType>
    <fullName>Products_and_Services</fullName>
    <active>true</active>
    <description>This record type is designated for use in Consumer Services.</description>
    <label>Products and Services</label>
</RecordType>