force-app/main/default/objects/Product2/listViews/ASAProducts.listView-meta.xml
<ListView>
    <fullName>ASAProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>c2g__CODASalesRevenueAccount__c</columns>
    <columns>DNU_Activity_Code__c</columns>
    <columns>Dimension_1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>SALT Services,Charter Program,Fee For Service</value>
    </filters>
    <label>ASA Products</label>
</ListView>