force-app/main/default/objects/Product2/listViews/Discounts_Active.listView-meta.xml
<ListView>
    <fullName>Discounts_Active</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>DNU_Activity_Code__c</columns>
    <columns>Dimension_1__c</columns>
    <columns>c2g__CODASalesRevenueAccount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Discounts</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Discounts</label>
</ListView>