force-app/main/default/objects/Product2/listViews/zz_Beginning_Balance_Accounts.listView-meta.xml
<ListView>
    <fullName>zz_Beginning_Balance_Accounts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Dimension_1__c</columns>
    <columns>c2g__CODASalesRevenueAccount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>zz</value>
    </filters>
    <label>zz Beginning Balance Accounts</label>
    <sharedTo>
        <group>FinancialForce_Team</group>
    </sharedTo>
</ListView>